cluster/personal/psono/server/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: psono-server
    app.kubernetes.io/version: 7.4.4
  name: psono-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: psono-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: psono-server
        app.kubernetes.io/version: 7.4.4
    spec:
      automountServiceAccountToken: false
      containers:
      - image: psono/psono-server:7.4.4@sha256:e06a0d631c276b148a4b2133e6737f38a31b4313e2c2f65d528d4cb55e8d9ce7
        name: psono-server
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - mountPath: /psono-secrets
          name: secret-volume
          readOnly: true
        - mountPath: /tmp
          name: tmp
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        securityContext:
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
      volumes:
      - name: secret-volume
        secret:
          secretName: psono-server-secret
      - name: tmp
        emptyDir: {}
      securityContext:
        seccompProfile:
          type: RuntimeDefault
