cluster/personal/psono/server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: psono-server
    app.kubernetes.io/version: 7.4.4
  name: psono-server
spec:
  selector:
    app.kubernetes.io/name: psono-server
  ports:
  - name: http
    port: 80
    targetPort: 80
