cluster/personal/psono/server/default-deny-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: psono-default-deny-egress
spec:
  podSelector: {}
  policyTypes:
  - Egress
